2013-12-09  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.dg/tree-ssa/loop-31.c: Update scan pattern.

2013-12-09  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/asan-dg.exp (asan-gtest): Remove expected output from the
	pass/fail line and add it to the log instead.

2013-12-08  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/52898
	PR target/51697
	* gcc.target/sh/pr51697.c: New.

2013-12-08  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/macro-fusion-1.c: Cleanup sched2 rtl dump.
	* gcc.dg/macro-fusion-2.c: Ditto.
	* gcc.dg/vect/vect-simd-clone-10a.c: Cleanup vect tree dump.
	* gcc.dg/vect/vect-simd-clone-12a.c: Ditto.

2013-12-08  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58099
	PR fortran/58676
	PR fortran/41724
	* gfortran.dg/elemental_subroutine_8.f90: New.
	* gfortran.dg/proc_decl_9.f90: Add ELEMENTAL to make valid.
	* gfortran.dg/proc_ptr_11.f90: Ditto.
	* gfortran.dg/proc_ptr_result_8.f90: Ditto.
	* gfortran.dg/proc_ptr_32.f90: Update dg-error.
	* gfortran.dg/proc_ptr_33.f90: Ditto.
	* gfortran.dg/proc_ptr_result_1.f90: Add abstract interface
	which is not elemental.
	* gfortran.dg/proc_ptr_result_7.f90: Ditto.

2013-12-07  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59414
	* gfortran.dg/class_result_2.f90: New.

2013-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59388
	* gcc.c-torture/execute/pr59388.c: New test.

2013-12-06  Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR testsuite/59043
	* g++.dg/pubtypes.C: Adjust the regular expression.
	* gcc.dg/pubtypes-1.c: Likewise.
	* gcc.dg/pubtypes-2.c: Likewise.
	* gcc.dg/pubtypes-3.c: Likewise.
	* gcc.dg/pubtypes-4.c: Likewise.

2013-12-06  Tejas Belagod  <tejas.belagod@arm.com>

	* gcc.dg/vect/vect-nop-move.c: Fix dg options.

2013-12-06  Uros Bizjak  <ubizjak@gmail.com>

	PR target/59405
	* gcc.target/i386/pr59405.c: New test.

2013-12-06  Ian Bolton  <ian.bolton@arm.com>
	    Mark Mitchell  <mark@codesourcery.com>

	PR target/59091
	* gcc.target/arm/builtin-trap.c: New test.