@@ -1,0 +1,9 @@
+// PR c++/52707
+// { dg-do compile { target c++11 } }
+
+struct A {
+ int m;
+ A() = delete;
+};
+
+A a = {1};
